--- a/index.html
+++ b/index.html
@@ -259,7 +259,7 @@
             }
         }
 
-        .img-fluid{
+        .img-fluids{
             max-width: 15%
         }
         
@@ -284,7 +284,7 @@
 
     <section class="hero-section text-dark" style="background-color: #ffffff;">
         <div class="container text-center">
-            <img src="https://dummyimage.com/900x400/000000/fff"
+            <img src="https://flexccouplings.com/images/banner1.jpg"
                 alt="SanRo-1 Quick Disconnect Couplings - Reliable and Versatile" class="img-fluid">
             <div class="hero-text position-absolute top-50 start-50 translate-middle text-center">
                 <h1 class="display-4">Reliable Quick Disconnect Couplings</h1>
@@ -354,7 +354,7 @@
         <div class="container">
             <div class="row align-items-center">
                 <div class="col-md-6">
-                    <img src="web-icon.jpg" alt="SanRo-1 Logo" class="img-fluid">
+                    <img src="web-icon.jpg" alt="SanRo-1 Logo" class="img-fluids">
                 </div>
                 <div class="col-md-6 text-center text-md-right">
                     <p>&copy; 2023 SanRo-1. All Rights Reserved.</p>
