--- a/product.html
+++ b/product.html
@@ -77,7 +77,7 @@
             }
         }
 
-        .img-fluid {
+        .img-fluids {
             max-width: 15%
         }
     </style>
@@ -174,7 +174,7 @@
         <div class="container">
             <div class="row align-items-center">
                 <div class="col-md-6">
-                    <img src="web-icon.jpg" alt="SanRo-1 Logo" class="img-fluid">
+                    <img src="web-icon.jpg" alt="SanRo-1 Logo" class="img-fluids">
                 </div>
                 <div class="col-md-6 text-center text-md-right">
                     <p>&copy; 2023 SanRo-1. All Rights Reserved.</p>
