--- a/index.html
+++ b/index.html
@@ -478,7 +478,8 @@
 
             var x = "https://wa.me/9844200849?text=Quick Query--" + message;
 
-            window.location.href = x;
+            //window.location.href = x;
+            window.open(x, '_blank');
         }
 
         function sendMessage(prodName){
